--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone/blob/main/images/%E6%89%8B-%E5%8E%BB%E8%83%8C.png?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="build/static/css/main.306a78c4.css">
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
+    <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
+    <script src="/build/static/js/main.642d456f.js"></script>
   </body>
 </html>
