--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,18 @@
     <meta name="theme-color" content="#000000" /> <!-- 還沒改主色 -->
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://goldeggphone.com/" /> <!-- 之後換成首頁網址 -->
+    <meta property="og:url" content="https://goldeggphone.com/" />
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone/blob/main/images/%E6%89%8B-%E5%8E%BB%E8%83%8C.png?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="gep.css">
+    <link rel="stylesheet" href="build/static/css/main.306a78c4.css">
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
+    <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
+    <script src="/build/static/js/main.642d456f.js"></script>
   </body>
 </html>
