--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
     <meta property="og:title" content="金機誕" />
-    <meta name="theme-color" content="#000000" /> <!-- 還沒改主色 -->
+    <meta name="theme-color" content="#000000" />
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://goldeggphone.com/" />
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone/blob/main/images/%E6%89%8B-%E5%8E%BB%E8%83%8C.png?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="build/static/css/main.306a78c4.css">
+    <link rel="stylesheet" href="build/static/css/main.86ece3b3.css">
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
@@ -26,6 +26,6 @@
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
-    <script src="/build/static/js/main.642d456f.js"></script>
+    <script src="/build/static/js/main.15e9f778.js"></script>
   </body>
 </html>
