--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
     <meta property="og:title" content="金機誕" />
-    <meta name="theme-color" content="#000000" /> <!-- 還沒改主色 -->
+    <meta name="theme-color" content="#000000" />
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://goldeggphone.com/" /> <!-- 之後換成首頁網址 -->
+    <meta property="og:url" content="https://goldeggphone.com/" />
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone/blob/main/images/%E6%89%8B-%E5%8E%BB%E8%83%8C.png?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
