add services / about /price

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
-    <meta name="copyright" content="Copyright © 2016-2023 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,手機,手機維修30分鐘,iPhone手機維修,samsung手機維修,手機周邊">
+    <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
+    <meta name="keywords" content="手機維修,桃園 手機維修,龜山 手機維修,手機,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,iPhone手機維修,samsung手機維修,手機周邊,手機配件,保護貼">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone/main/images/%E4%BF%AE%E7%90%86%E9%9B%9E530.ico">
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone/blob/main/images/%E6%89%8B-%E5%8E%BB%E8%83%8C.png?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="build/static/css/main.86ece3b3.css">
+    <link rel="stylesheet" href="build/static/css/main.9cc918f4.css">
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
@@ -26,6 +26,6 @@
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
-    <script src="/build/static/js/main.428c819f.js"></script>
+    <script src="/build/static/js/main.4ffa5717.js"></script>
   </body>
 </html>
