--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
-    <meta name="copyright" content="Copyright © 2016-2023 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,手機,手機維修30分鐘,iPhone手機維修,samsung手機維修,手機周邊">
+    <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
+    <meta name="keywords" content="手機維修,桃園 手機維修,龜山 手機維修,手機,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,iPhone手機維修,samsung手機維修,手機周邊,手機配件,保護貼">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone/main/images/%E4%BF%AE%E7%90%86%E9%9B%9E530.ico">
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
@@ -22,7 +22,6 @@
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
   </body>
 </html>
