修復重新整理重新整理404問題

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
     <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,桃園 手機維修,龜山 手機維修,手機,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,iPhone手機維修,samsung手機維修,手機周邊,手機配件,保護貼">
+    <meta name="keywords" content="手機維修,桃園 手機維修,龜山 手機維修,金雞蛋,手機,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,iPhone手機維修,samsung手機維修,手機周邊,手機配件,保護貼">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone/main/images/%E4%BF%AE%E7%90%86%E9%9B%9E530.ico">
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
-    <meta property="og:title" content="金機誕" />
+    <meta property="og:title" content="金機誕-龜山專業手機維修 APPLE獨立維修中心" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
