--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
     <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,桃園 手機維修,龜山 手機維修,金雞蛋,手機,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,iPhone手機維修,samsung手機維修,手機周邊,手機配件,保護貼">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone/main/images/%E4%BF%AE%E7%90%86%E9%9B%9E530.ico">
+    <meta name="keywords" content="手機維修,iphone手機維修,桃園手機維修,龜山手機維修,新北手機維修,鶯歌手機維修,林口手機維修,
+    蘆竹手機維修,南崁手機維修,八德手機維修,銘傳手機維修,手機現場維修,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,Samsung手機維修,
+    桃園Samsung手機維修,OPPO手機維修,桃園OPPO手機維修,三星手機維修,桃園三星手機維修,Huawei手機維修,桃園Huawei手機維修,
+    華為手機維修,桃園華為手機維修,HTC手機維修,桃園HTC手機維修,Sony手機維修,桃園Sony手機維修,ASUS手機維修,桃園ASUS手機維修,
+    小米手機維修,桃園小米手機維修,紅米手機維修,桃園紅米手機維修,LG手機維修,桃園LG手機維修,NOKIA手機維修,桃園NOKIA手機維修,
+    修手機,桃園修手機,龜山修手機,手機買賣,桃園手機買賣,龜山手機買賣,二手機買賣,桃園二手機買賣,龜山二手機買賣,中古機買賣,
+    桃園中古機買賣,龜山中古機買賣,二手機回收,桃園二手機回收,龜山二手機回收,手機門號申辦,桃園手機門號申辦,龜山手機門號申辦,
+    手機門號續約,桃園手機門號續約,龜山門號續約,手機免卡分期,桃園手機免卡分期,龜山手機免卡分期,手機無卡分期,桃園手機無卡分期,
+    龜山手機無卡分期,ipad維修,桃園ipad維修,Mac維修,桃園Mac維修,iphone換螢幕,桃園iphone換螢幕,iphone換電池,桃園iphone換電池,
+    手機換螢幕,桃園手機換螢幕,手機換電池,桃園手機換電池,AppleWatch維修,桃園AppleWatch維修,桃園3C包膜,桃園手機維修推薦,
+    桃園iphone維修推薦">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone-formal/main/src/images/%E5%B0%8F%E9%9B%9Elogo.ico">
     <meta name="description" content="金機誕-手機現場維修服務">   
     <title>金機誕-手機維修</title> 
     <meta property="og:title" content="金機誕-龜山專業手機維修 APPLE獨立維修中心" />
@@ -18,13 +28,13 @@
     <meta property="og:image" content="https://github.com/yan-tingciou/goldeggphone-formal/blob/main/src/images/%E9%87%91%E6%A9%9F%E8%AA%95logo.jpeg?raw=true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="build/static/css/main.9cc918f4.css">
+    <link rel="stylesheet" href="build/static/css/main.86f673ec.css">
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
-    <script src="/build/static/js/main.eda122b5.js"></script>
+    <script src="/build/static/js/main.761644da.js"></script>
   </body>
 </html>
