--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M096ZH5Y20"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-M096ZH5Y20');
+    </script>
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
     <script src="/build/static/js/main.d0e5cd09.js"></script>
