新增中壢、內壢、訪客人數功能

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
     <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,iphone手機維修,桃園手機維修,龜山手機維修,新北手機維修,鶯歌手機維修,林口手機維修,
+    <meta name="keywords" content="手機維修,iphone手機維修,桃園手機維修,龜山手機維修,中壢手機維修,內壢手機維修,新北手機維修,鶯歌手機維修,林口手機維修,
     蘆竹手機維修,南崁手機維修,八德手機維修,銘傳手機維修,手機現場維修,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,Samsung手機維修,
     桃園Samsung手機維修,OPPO手機維修,桃園OPPO手機維修,三星手機維修,桃園三星手機維修,Huawei手機維修,桃園Huawei手機維修,
     華為手機維修,桃園華為手機維修,HTC手機維修,桃園HTC手機維修,Sony手機維修,桃園Sony手機維修,ASUS手機維修,桃園ASUS手機維修,
