--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金機誕-手機維修">
     <meta name="copyright" content="Copyright © 2016-2024 金機誕 All rights reserved.">
-    <meta name="keywords" content="手機維修,iphone手機維修,桃園手機維修,龜山手機維修,新北手機維修,鶯歌手機維修,林口手機維修,
+    <meta name="keywords" content="手機維修,iphone手機維修,桃園手機維修,龜山手機維修,中壢手機維修,內壢手機維修,新北手機維修,鶯歌手機維修,林口手機維修,
     蘆竹手機維修,南崁手機維修,八德手機維修,銘傳手機維修,手機現場維修,APPLE原廠零件,APPLE獨立維修中心,手機快速維修,Samsung手機維修,
     桃園Samsung手機維修,OPPO手機維修,桃園OPPO手機維修,三星手機維修,桃園三星手機維修,Huawei手機維修,桃園Huawei手機維修,
     華為手機維修,桃園華為手機維修,HTC手機維修,桃園HTC手機維修,Sony手機維修,桃園Sony手機維修,ASUS手機維修,桃園ASUS手機維修,
@@ -18,7 +18,7 @@
     手機換螢幕,桃園手機換螢幕,手機換電池,桃園手機換電池,AppleWatch維修,桃園AppleWatch維修,桃園3C包膜,桃園手機維修推薦,
     桃園iphone維修推薦">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone-formal/main/src/images/%E5%B0%8F%E9%9B%9Elogo.ico">
-    <meta name="description" content="金機誕-手機現場維修服務">   
+    <meta name="description" content="金機誕-手機現場維修服務，金機誕成立於2016，我們成立7年多來一直秉持著專業、效率、品質、誠信，四大堅持，盡可能讓您的產品恢復如初，並持續不斷精進技術設備增加經驗，穩健成長，除手機平板筆電維修外，還提供門號申辦、全新機/中古機買賣、手機配件、客製化包膜等等的一條龍服務，我們也在2024年4月取得蘋果APPLE獨立維修中心的資格，除一般認證的維修零件，也能提供APPLE原廠的零件供您選擇。">   
     <title>金機誕-手機維修</title> 
     <meta property="og:title" content="金機誕-龜山專業手機維修 APPLE獨立維修中心" />
     <meta name="theme-color" content="#000000" />
@@ -42,8 +42,14 @@
 
       gtag('config', 'G-M096ZH5Y20');
     </script>
+
+    <!-- counter -->
+    <div id="sfcfs5muueycpssknmdu23g26ppsmxp5n3j"></div>
+    <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=fs5muueycpssknmdu23g26ppsmxp5n3j&down=async" async></script>
+    <noscript><a href="https://www.freecounterstat.com" title="page counter"><img src="https://counter4.optistats.ovh/private/freecounterstat.php?c=fs5muueycpssknmdu23g26ppsmxp5n3j" border="0" title="page counter" alt="page counter"></a></noscript>
+
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
-    <script src="/build/static/js/main.d0e5cd09.js"></script>
+    <script src="/build/static/js/main.05174b79.js"></script>
   </body>
 </html>
