刪除多餘的訪客人數顯示

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </script>
 
     <!-- counter -->
-    <div id="sfcfs5muueycpssknmdu23g26ppsmxp5n3j"></div>
+    <!-- <div id="sfcfs5muueycpssknmdu23g26ppsmxp5n3j"></div> -->
     <script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=fs5muueycpssknmdu23g26ppsmxp5n3j&down=async" async></script>
 
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
