update-iphoneData.json

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     桃園iphone維修推薦">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone-formal/main/src/images/%E5%B0%8F%E9%9B%9Elogo.ico">
     <meta name="description" content="金機誕-手機現場維修服務，金機誕成立於2016，我們成立7年多來一直秉持著專業、效率、品質、誠信，四大堅持，盡可能讓您的產品恢復如初，並持續不斷精進技術設備增加經驗，穩健成長，除手機平板筆電維修外，還提供門號申辦、全新機/中古機買賣、手機配件、客製化包膜等等的一條龍服務，我們也在2024年4月取得蘋果APPLE獨立維修中心的資格，除一般認證的維修零件，也能提供APPLE原廠的零件供您選擇。">   
-    <title>金機誕-手機維修</title> 
-    <meta property="og:title" content="金機誕-龜山專業手機維修 APPLE獨立維修中心" />
+    <title>金機誕手機維修-Apple獨立維修中心</title> 
+    <meta property="og:title" content="金機誕手機維修-Apple 獨立維修中心" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
@@ -32,7 +32,9 @@
     <meta name="google-site-verification" content="jdP5JnEZrm1oeoxL246p8yheoTmblOIAXqo8haEgxSw" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M096ZH5Y20"></script>
     <script>
@@ -49,6 +51,6 @@
 
     <script src="https://kit.fontawesome.com/121eb476ab.js" crossorigin="anonymous"></script>
     <script src="/build/static/js/787.b1bbf803.chunk.js"></script>
-    <script src="/build/static/js/main.d53ea294.js"></script>
+    <script src="/build/static/js/main.1393d9f0.js"></script>
   </body>
 </html>
