--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     桃園iphone維修推薦">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/yan-tingciou/goldeggphone-formal/main/src/images/%E5%B0%8F%E9%9B%9Elogo.ico">
     <meta name="description" content="金機誕-手機現場維修服務">   
-    <title>金機誕-手機維修</title> 
-    <meta property="og:title" content="金機誕-龜山專業手機維修 APPLE獨立維修中心" />
+    <title>金機誕手機維修-Apple獨立維修中心</title> 
+    <meta property="og:title" content="金機誕手機維修-Apple 獨立維修中心" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:description" content="金機誕用最棒的品質！最實在的價格！最完善的售後！幫您修好手機^__^">
     <meta property="og:type" content="website" />
